--- a/styles/rodapé.css
+++ b/styles/rodapé.css
@@ -6,3 +6,31 @@ hr {
     background-color: var(--branco);
     padding: 1em;
 }
+
+.lista-rodapé {
+    display: none;
+}
+
+@media screen and ( min-width: 1024px) {
+    rodapé {
+        display: flex;
+        justify-content: space-around;
+    }
+    .lista-rodapé__item {
+        display: block;
+    }
+    .lista-rodapé__item{
+        display: flex;
+        align-items: center;
+        margin: 0.6em 0;
+    }
+
+    .lista-rodapé__ {
+        font-size: 14px;
+        color: var(--cinza-claro);
+    }
+    .rodape__titulo {
+        font-size: 24px;
+    }
+}
+    
