--- a/styles/banner.css
+++ b/styles/banner.css
@@ -33,3 +33,20 @@
     background: url("../img/Lupa.svg") no-repeat;
     background-position: 1em;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (min-widht: 1728px) {
+    
